--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 }
 img{
     display: block;
-	max-width:100%;
-	height:auto;
 }
 body{
     font-family: "Roboto", "Noto Sans TC",sans-serif;
@@ -18,36 +16,29 @@ body{
     font-style: normal;
     font-optical-sizing: auto;
 }
-.d-flex{
-    display: flex;
-}
-.box-in-set{
-    max-width: 1296px;
-    margin: 0 auto;
-}
-.ml{
-    margin-left: 24px;
-}
-.mr{
-    margin-right: 24px;
-}
 /*----------------------------前置區------------------------*/
 /*----------------------------nav--------------------------*/
 .nav{
     background-color:#AA0601 ;
 }
 .nav-box-in{
+    max-width: 1320px;
+    margin: 0 auto;
+    padding:0 12px;
+    display: flex;
     justify-content: space-between;
 }
 .nav_1A-img{
     padding: 12px 0;
-}
-.nav_1A-img img{
     max-width: 80px;
 }
+.nav_1A-img img{
+    width: 100%;
+}
 .nav_1A-list{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin: 0 -32px;
 }
 .nav_2A-list{
     padding: 0 32px;
@@ -57,6 +48,9 @@ body{
     font-size: 20px;
     line-height: 30px;
     text-align: center;
+}
+.nav_2A-list:last-child{
+    padding: 0 0 0 32px;
 }
 /*----------------------------nav--------------------------*/
 /*---------------------------header------------------------*/
@@ -68,13 +62,15 @@ body{
     background-repeat: no-repeat;
 }
 .header-box-in{
+    max-width: 1320px;
+    margin: 0 auto;
     height: 100%;
+    padding:0 12px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 .header_1A-article{
-    width: 600px;
     text-align: right;
 }
 .header_1A-article h2{
@@ -102,8 +98,10 @@ body{
 }
 /*---------------------------header------------------------*/
 /*---------------------------icon--------------------------*/
-.icon_box-in{
+.icon-box-in{
+    max-width: 1320px;
     padding: 80px 12px;
+    margin: 0 auto;
 }
 .icon_1A-title{
     text-align: center;
@@ -113,6 +111,7 @@ body{
     font-weight: bold;
 }
 .icon_1A-icon{
+    display: flex;
     justify-content: space-between;
     flex-wrap:wrap;
     margin: 0 -12px;
@@ -127,6 +126,7 @@ body{
     line-height: 36px;
     color: #650300;
     font-weight: bold;
+    padding-bottom: 8px;
 }
 .icon_2A-card1 p{
     font-size: 16px;
@@ -134,26 +134,32 @@ body{
     color: #000000;
 }
 .icon_3A-img{
-    max-width:85px ;
+    max-width:85px;
     margin: 0 auto;
+    padding-bottom: 25px;
+}
+.icon_3A-img img{
+    width: 100%;
 }
 /*---------------------------icon--------------------------*/
 /*---------------------------main--------------------------*/
-.main_box-in{
-    padding: 80px 12px;
+.main-box-in{
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 80px 0px;
 }
 .main_1A-title{
     margin-bottom: 24px;
     text-align: center;
-    font-size: 3rem;
+    font-size: 48px;
     line-height: 72px;
     color: #650300;
     font-weight: bold;
 }
 .main_1A-icon{
+    display: flex;
     justify-content: space-between;
     flex-wrap:wrap;
-    margin: 0 -12px;
 }
 .main_2A-card1{
     width: 33.333333%;
@@ -161,21 +167,24 @@ body{
 }
 .main_2A-card1 p{
     text-align: center;
-    font-size: 3rem;
+    --min-size: 32;
+    --max-size: 48;
+    font-size: clamp(var(--min-size) * 1px, 3vw, var(--max-size) * 1px);
     line-height: 72px;
     color: #AA0601;
     font-weight: 900;
-    font-family: "Roboto",sans-serif;
     font-style: italic;
 }
 .main_3A-img{
     max-width:416px ;
     margin: 0 auto 8px auto;
 }
+.main_3A-img img{
+    width: 100%;
+}
 /*---------------------------main--------------------------*/
 /*--------------------------main2--------------------------*/
 .main2{
-    height: 608px;
     background-image: url(img/index-bg.png);
     background-position: center;
     background-size: cover;
@@ -185,15 +194,16 @@ body{
     justify-content: center;
     align-items: center;
 }
-.main2_box-in{
-    max-width: 1296px;
-    height: 448px;
+.main2-box-in{
+    max-width: 1320px;
     margin: 0 auto;
+    padding: 80px 12px 56px 12px;
     display: flex;
     flex-direction:column;
     justify-content: space-between;
 }
 .main2_1A-title{
+    margin-bottom: 48px;
     text-align: center;
     font-size: 48px;
     line-height: 72px;
@@ -201,11 +211,13 @@ body{
     font-weight: bold;
 }
 .main2_1A-icon{
-    justify-content: space-between;
+    display: flex;
+    justify-content: center;
     flex-wrap:wrap;
 }
 .main2_2A-card1{
     width: 50%;
+    margin-bottom: 24px;
 }
 .main2_2A-card1 p{
     background-color: #ffffff;
@@ -214,31 +226,35 @@ body{
     line-height: 72px;
     color: #AA0601;
     font-weight: 900;
-    font-family: "Roboto",sans-serif;
     font-style: italic;
     padding: 8px 0;
 }
+.main2_3A-img{
+    max-width:648px;
+    height:240px;
+}
 .main2_3A-img img{
-    max-width:100%;
-    height:auto;
+    width:100%;
+    height:100%;
     object-fit: cover;
 }
 /*--------------------------main2--------------------------*/
 /*--------------------------main3--------------------------*/
 .main3{
-    height: 791px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.main3_box-in{
-    max-width: 1296px;
-    height: 631px;
+.main3-box-in{
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 80px 0;
     display: flex;
     flex-direction:column;
     justify-content: space-between;
 }
 .main3_1A-title{
+    margin-bottom: 48px;
     text-align: center;
     font-size: 48px;
     line-height: 72px;
@@ -246,52 +262,56 @@ body{
     font-weight: bold;
 }
 .main3_1A-icon{
-    justify-content: space-between;
-    flex-wrap:wrap;
+    display: flex;
+    justify-content: center;
 }
 .main3_2A-card1{
-    height: 511px;
-    width: 23.611%;
+    max-width: 306px;
+    width: 25%;
+    margin: 0 12px 24px 12px;
     display: flex;
     flex-direction:column;
     box-shadow:0 0 3px 0 rgba(0, 0, 0, 0.5); ;
 }
 .main3_3A-img{
     max-width:306px;
+    max-height: auto;
+}
+.main3_3A-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .main3_3B{
-    height: 205px;
-    box-sizing: border-box;
     padding: 16px;
     display: flex;
     flex-direction:column;
+    height: 208px;
 }
 .main3_3B p{
     padding-bottom: 8px;
     line-height: 24px;
 }
+.main3_3B p:last-child{
+    padding-bottom: 0px;
+}
 .main3_4A-time{
     margin-top: auto;
-}
-.main3_4A-time time{
     font-size: 14px;
     line-height: 21px;
     color:#707070;
 }
-.pd-del{
-    padding-bottom: -8px;
-}
 /*--------------------------main3--------------------------*/
 /*--------------------------form --------------------------*/
 .form{
-    height: 922px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .form-box-in{
-    max-width: 636px;
-    height: 762px;
+    max-width: 660px;
+    margin: 0 auto;
+    padding: 80px 12px;
 }
 .form_1A-form{
     display: flex;
@@ -321,16 +341,16 @@ body{
 }
 .form_3A-check{
     width: unset;
-    margin: 0 0.5em 0 0;
+    margin: 0 8px 0 0;
     vertical-align: middle;
 }
 .form_2A-submit{
     display: block;
     max-width: 416px;
     width: 100%;
-    height: 3.5em;
+    height: 56px;
     line-height: 24px;
-    font-size: 1rem;
+    font-size: 16px;
     color: #ffffff;
     background-color: #AA0601;
     margin: 48px auto 0 auto;
@@ -345,25 +365,36 @@ body{
 .footer{
     background-color: #AA0601;
 }
+.footer-box-in{
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 0 12px;
+}
 .footer_1A-box{
     padding-top: 48px;
     padding-bottom: 32px;
     border-bottom:1px solid #ffffff;
-    justify-content: space-between;
+    display: flex;
+    justify-content: center;
 }
 .footer_3A-text-box{
     height: 48px;
     margin-bottom: 8px;
-    justify-content: center;
+    display: flex;
     align-items: center;
 }
 .footer_3A-text-box p{
-    margin-right: 48px;
+    margin-right: clamp(24px,5vw,48px);
 }
 .footer_3A-phone-box{
+    display: flex;
     margin-bottom: 8px;
 }
+.footer_3A-email-box{
+    display: flex;
+}
 .footer_3B-icon-img{
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -373,6 +404,7 @@ body{
 }
 .footer_1A-ft-box{
     padding:32px 0 32px 0;
+    display: flex;
     justify-content: space-between;
 }
 .footer_1A-ft-box p{
@@ -380,6 +412,7 @@ body{
     color:#ffffff;
 }
 .text-set{
+    font-size: 16px;
     color:#ffffff;
     line-height: 24px;
 }
@@ -393,37 +426,53 @@ body{
     line-height: 54px;
     color:#ffffff
 }
-.footer_2B-text{
+.footer_2B-text
+{   display: flex;
     gap: 48px;
 }
 .footer_2B-text p{
+    display: flex;
     font-size: 14px;
     line-height: 21px;
 }
 /*------------------------ footer-------------------------*/
-@media(max-width:1030px){
+@media(max-width:768px){
     .box-in-set{
         max-width: 696px;
-        margin: 0 auto;
     }
     /*-------nav---------*/
+    .nav-box-in{
+        max-width: 696px;
+    }
     /*-------nav---------*/
 
     /*-------header------*/
     .header{        
         background-image: url(img/home-header-sm.png);
     }
+    .header-box-in{
+        max-width: 696px;
+    }
     /*-------header------*/
 
     /*-------icon--------*/
+    .icon-box-in{
+        max-width: 696px;
+    }
     .icon_2A-card1{
         width: 50%;
     }
     /*-------icon--------*/
 
     /*-------main1-------*/
+    .main-box-in{
+        max-width: 720px;
+    }
     .main_2A-card1{
         width: 100%;
+    }
+    .main_2A-card1 p{
+        font-size:48px;
     }
     .main_3A-img{
         max-width:336px ;
@@ -432,57 +481,44 @@ body{
 
     /*-------main2-------*/
     .main2{
-        height: 960px;
         background-image: url(img/index-bg-sm.png);
     }
-    .main2_box-in{
-        max-width: 696px;
-        height: 800px;
-    }
-    .main2_1A-icon{
-        gap:24px;
+    .main2-box-in{
+        max-width: 720px;
     }
     .main2_2A-card1{
         width: 100%;
     }
-    .main2_3A-img img{
-        width:696px;
-        height:240px;
-        object-fit: cover;
+    .main2_3A-img{
+        max-width:696px;
     }
     /*-------main2-------*/
 
     /*-------main3-------*/
-    .main3{
-        height: 1326px;
-    }
-    .main3_box-in{
-        max-width: 696px;
-        height: 1166px;
+    .main3-box-in{
+        max-width: 720px;
     }
     .main3_1A-icon{
-        gap: 24px;
+        flex-wrap:wrap;
     }
     .main3_2A-card1{
-        height: 511px;
-        width: 48.276%;
+        width: 50%;
+        max-width:336px;
     }
     .main3_3A-img{
         max-width:336px;
-        height: auto;
+        max-height:306px;
     }
     /*-------main3-------*/
 
     /*-------form--------*/
     .form{
-        height: 886px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
     .form-box-in{
-        max-width: 576px;
-        height: 726px;
+        max-width: 600px;
     }
     .form_1A-text{
         font-size: 16px;
@@ -494,34 +530,54 @@ body{
     /*-------form--------*/
 
     /*-------foote-------*/
+    .footer-box-in{
+        max-width: 720px;
+        padding: 0 12px;
+    }
+    .footer_3A-text-box p{
+        margin-right: clamp(18px,3.5vw,48px);
+    }
     .footer_3B-icon-img img{
         max-width: 40px;
         margin-left:16px;
     }
+    .icon-text-set{
+        font-size: clamp(32px,5vw,36px);
+        line-height: 54px;
+    }
+    .text-set{
+        font-size: 16px; 
+    }
     /*-------foote-------*/
 }
 
-@media(max-width:735px){
-    .box-in-set{
-        max-width: 348px;
-        margin: 0 auto;
-    }
+@media(max-width:576px){
     /*-------nav-------*/
-    .nav{
-        padding: 0 32px;
-    }
     .nav-box-in{
+        max-width: 375px;
         flex-wrap:wrap;
+        padding-right: 0px;
+        padding-left: 0px;
     }
     .nav_1A-img{
         width: 100%;
+        padding-left: 14px;
     }
     .nav_1A-list{
         flex-wrap:wrap;
+        width: 100%;
     }
     .nav_2A-list{
         width: 50%;
         border: 1px solid white;
+        padding: 12px 0px;
+    }
+    .nav_2A-list p{
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .nav_2A-list:last-child{
+        padding: 12px 0px;
     }
     /*-------nav-------*/
 
@@ -529,6 +585,11 @@ body{
     .header{
         height: 396px;
         background-image: url(img/home-header-sm.png);
+    }
+    .header-box-in{
+        max-width: 348px;
+        padding-right: 0px;
+        padding-left: 0px;
     }
     .header_1A-article h2{
         font-size: 16px;
@@ -544,6 +605,11 @@ body{
     /*-----header------*/
 
     /*------icon-------*/
+    .icon-box-in{
+        max-width: 375px;
+        padding: 40px 14px;
+    }
+    
     .icon_1A-title{
         text-align: center;
         font-size: 24px;
@@ -555,11 +621,25 @@ body{
         width: 100%;
         padding: 33px 14px 0 14px;
     }
+    .icon_3A-img{
+        max-width:100px;
+        padding-bottom: 16px;
+    }
     /*------icon-------*/
 
     /*------main-------*/
+    .main-box-in{
+        max-width: 375px;
+        padding: 40px 14px;
+    }
+    .main_1A-title{
+        font-size: 24px;
+        line-height: 36px;
+        margin-bottom: 0px;
+    }
     .main_2A-card1{
         width: 100%;
+        padding: 24px 0 0 0;
     }
     .main_3A-img{
         max-width:348px ;
@@ -567,17 +647,20 @@ body{
     /*------main-------*/
 
     /*------main2------*/
+    .main2-box-in{
+        max-width: 375px;
+        padding: 40px 14px 16px 14px;
+    }
     .main2{
-        height: 820px;
         background-image: url(img/index-bg-md.png);
     }
     .main2_box-in{
         max-width: 347px;
-        height: 740px;
     }
     .main2_1A-title{
         font-size: 24px;
         line-height: 36px;
+        margin-bottom: 24px;
     }
     .main2_2A-card1{
         width: 100%;
@@ -593,47 +676,40 @@ body{
         font-style: italic;
         padding: 8px 0;
     }
-    .main2_3A-img img{
-        width:348px;
-        height:240px;
-        object-fit: cover;
+    .main2_3A-img{
+        max-width: 348px;
     }
     /*------main2------*/
 
     /*------main3------*/
-    .main3{
-        height: 2232px;
-    }
-    .main3_box-in{
-        max-width: 347px;
-        height: 2152px;
+    .main3-box-in{
+        max-width: 375px;
+        padding: 40px 0;
     }
     .main3_1A-title{
+        margin-bottom: 24px;
         font-size: 24px;
         line-height: 36px;
     }
-    .main3_1A-icon{
-        gap: 0px;
-    }
     .main3_2A-card1{
-        height: 511px;
+        max-width:347px;
         width: 100%;
     }
     .main3_3A-img{
         max-width:347px;
+        max-height: 306px;
     }
     /*------main3------*/
 
     /*------form-------*/
     .form{
-        height: 794px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
     .form-box-in{
-        max-width: 348px;
-        height: 714px;
+        max-width: 375px;
+        padding: 40px 14px;
     }
     .form_1A-title{
         font-size: 24px;
@@ -652,20 +728,21 @@ body{
     }
     /*------form-------*/
 
-    /*-------foote-------*/
+    /*-------footer-------*/
+    .footer-box-in{
+        max-width: 375px;
+        padding: 0 14px;
+    }
     .footer_1A-box{
         padding-top: 24px;
         padding-bottom: 24px;
     }
     .footer_1A-ft-box{
-        padding:16px 0 24px 0;
+        padding:16px 0 16px 0;
         flex-direction:column;
     }
     .footer_1A-ft-box p{
         margin-bottom: 8px;
-    }
-    .footer_2A-icon-box{
-        margin-right:-8px;
     }
     .footer_2B-text{
         flex-direction:column;
@@ -676,7 +753,7 @@ body{
     }
     .footer_3B-icon-img img{
         max-width: 24px;
-        margin-right:8px;
+        margin-left:8px;
     }
     .icon-set{
         font-size: 24px;
