--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*----------------------------前置區------------------------*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
 *,
 *::after,
@@ -11,10 +11,11 @@ img{
 }
 body{
     font-family: "Roboto", "Noto Sans TC",sans-serif;
-    font-weight: 400;
+    font-optical-sizing: auto;
+    font-weight: normal;
     font-size:16px;
     font-style: normal;
-    font-optical-sizing: auto;
+    line-height: 1.5;
 }
 /*----------------------------前置區------------------------*/
 /*----------------------------nav--------------------------*/
@@ -42,12 +43,12 @@ body{
 }
 .nav_2A-list{
     padding: 0 32px;
+    text-align: center;
 }
-.nav_2A-list p{
+.nav_2A-list a{
     color:#ffffff;
     font-size: 20px;
-    line-height: 30px;
-    text-align: center;
+    font-weight:300;
 }
 .nav_2A-list:last-child{
     padding: 0 0 0 32px;
@@ -75,7 +76,6 @@ body{
 }
 .header_1A-article h2{
     font-size: 36px;
-    line-height: 54px;
     color:#650300;
 }
 .header_1A-article h1{
@@ -95,18 +95,22 @@ body{
     font-size: 20px;
     line-height: 30px;
     font-family:"Noto Sans TC",sans-serif;
+    font-optical-sizing: auto;
+    font-weight: medium;
 }
 /*---------------------------header------------------------*/
 /*---------------------------icon--------------------------*/
+.icon{
+    background-color:#fbf2f2 ;
+}
 .icon-box-in{
     max-width: 1320px;
-    padding: 80px 12px;
+    padding: 80px 0px;
     margin: 0 auto;
 }
 .icon_1A-title{
     text-align: center;
     font-size: 48px;
-    line-height: 72px;
     color: #650300;
     font-weight: bold;
 }
@@ -114,7 +118,6 @@ body{
     display: flex;
     justify-content: space-between;
     flex-wrap:wrap;
-    margin: 0 -12px;
 }
 .icon_2A-card1{
     width: 25%;
@@ -123,14 +126,12 @@ body{
 .icon_2A-card1 h3{
     text-align: center;
     font-size: 24px;
-    line-height: 36px;
     color: #650300;
     font-weight: bold;
     padding-bottom: 8px;
 }
 .icon_2A-card1 p{
     font-size: 16px;
-    line-height: 24px;
     color: #000000;
 }
 .icon_3A-img{
@@ -165,12 +166,9 @@ body{
     width: 33.333333%;
     padding: 24px 12px 0 12px;
 }
-.main_2A-card1 p{
+.main_2A-card1 h3{
     text-align: center;
-    --min-size: 32;
-    --max-size: 48;
-    font-size: clamp(var(--min-size) * 1px, 3vw, var(--max-size) * 1px);
-    line-height: 72px;
+    font-size: 48px;
     color: #AA0601;
     font-weight: 900;
     font-style: italic;
@@ -206,7 +204,6 @@ body{
     margin-bottom: 48px;
     text-align: center;
     font-size: 48px;
-    line-height: 72px;
     color: #ffffff;
     font-weight: bold;
 }
@@ -223,7 +220,6 @@ body{
     background-color: #ffffff;
     text-align: center;
     font-size: 48px;
-    line-height: 72px;
     color: #AA0601;
     font-weight: 900;
     font-style: italic;
@@ -304,6 +300,7 @@ body{
 /*--------------------------main3--------------------------*/
 /*--------------------------form --------------------------*/
 .form{
+    background-color: #fbf2f2;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -320,19 +317,16 @@ body{
 .form_1A-title{
     text-align: center;
     font-size: 48px;
-    line-height: 72px;
     color: #650300;
     font-weight: bold;
     margin-bottom: 48px;
 }
 .form_1A-text{
     font-size: 20px;
-    line-height: 30px;
     margin-bottom: 24px;
 }
 .form_2A-text{
     display: block;
-    line-height: 24px;
 }
 .form_2A-input{
     width: 100%;
@@ -349,8 +343,8 @@ body{
     max-width: 416px;
     width: 100%;
     height: 56px;
-    line-height: 24px;
     font-size: 16px;
+    font-weight: bold;
     color: #ffffff;
     background-color: #AA0601;
     margin: 48px auto 0 auto;
@@ -417,7 +411,7 @@ body{
 }
 .footer_3B-icon-img{
     max-width:48px;
-    margin-left: 16px;
+    margin-left: 32px;
 }
 .footer_3B-icon-img img{
     width:100%;
@@ -425,7 +419,6 @@ body{
 .text-set{
     font-size: 16px;
     color:#ffffff;
-    line-height: 24px;
 }
 .icon-set{
     font-size: 48px;
@@ -436,13 +429,13 @@ body{
 {   display: flex;
     gap: 48px;
 }
-.footer_2B-text p{
+.footer_2B-text a{
     display: flex;
     font-size: 14px;
-    line-height: 21px;
+    color:#ffffff;
 }
 /*------------------------ footer-------------------------*/
-@media(max-width:768px){
+@media(max-width:992px){
     .box-in-set{
         max-width: 696px;
     }
@@ -545,6 +538,7 @@ body{
     }
     .footer_3B-icon-img{
         max-width:40px;
+        margin-left: 16px;
     }
     .footer_3B-icon-img img{
         width: 100%;
@@ -561,10 +555,10 @@ body{
     /*-------foote-------*/
 }
 
-@media(max-width:576px){
+@media(max-width:767px){
     /*-------nav-------*/
     .nav-box-in{
-        max-width: 375px;
+        max-width: 100%;
         flex-wrap:wrap;
         padding-right: 0px;
         padding-left: 0px;
@@ -582,7 +576,7 @@ body{
         border: 1px solid white;
         padding: 12px 0px;
     }
-    .nav_2A-list p{
+    .nav_2A-list a{
         font-size: 16px;
         line-height: 24px;
     }
@@ -758,12 +752,18 @@ body{
         flex-direction:column;
         gap: 0px;
     }
+    .footer_2B-text a{
+        margin-bottom: 8px;
+    }
     .footer_3A-text-box{
         display: none;
     }
-    .footer_3B-icon-img img{
-        max-width: 24px;
+    .footer_3B-icon-img{
+        max-width:24px;
         margin-left:8px;
+    }
+    .footer_3B-icon-img img{
+        width: 100%;
     }
     .icon-set{
         font-size: 24px;
